Version 0.4.3, 2009-
-------------
+ OpenSolaris support
+ Path separator

Version 0.4.2, 2009-04-17
-------------
+ File: Local modified/created date

Version 0.4.1, 2009-04-03
-------------
+ Dir: Option for GetAllFileNames (API incompatible change)

Version 0.4.0, 2009-03-20
-------------
+ Ztring: Radix option for To_xxx() (API incompatible change)

Version 0.3.8, 2009-02-13
-------------
x UTF-8 conversion replacement (was buggy with Debian Lenny, why?)
x Big files seeking on Linux
x Sometimes memory corruption with Ztring

Version 0.3.7 2009-01-30
-------------
+ Some additional helpers for Ztring
x Managing transformation from Unicode to local with unsupported characters

Version 0.3.6 2009-01-19
-------------
+ HTML protocol basic stuff
+ HTTP protocol helpers
x Crash in Ztring::Trim()
x Code cleanup

Version 0.3.5 2008-12-09
-------------
+ mipsel CPU support
+ Better Linux integration
+ rpm stuff (thanks to oc2pus http://packman.links2linux.org)
+ deb stuff
x Code cleanup

Version 0.3.4.0 2008-10-17
---------------
x some size of returned value problems in Ztring
x Bug in FileName.cpp

Version 0.3.3.9 2008-09-12
---------------
+ Sparc compatibility
x MacOS X wchar_t stuff

Version 0.3.3.8 2008-08-22
---------------
x UTF-16 parsing under Linux

Version 0.3.3.7 2008-06-13
---------------
+ MinGW compatibility

Version 0.3.3.6 2008-05-30
---------------
+ MSVC2008 project files

Version 0.3.3.5 2008-05-16
---------------
x Ztring: Problem with UTF-8 locale
x xxxBSD compatibility

Version 0.3.3.4 2008-04-26
---------------
x #1946749, Ztring: From_UTF16BE - endless loop

Version 0.3.3.3 2008-04-12
---------------
+ Adding some classes for speed improvement

Version 0.3.3.2 2008-03-28
---------------
x On some systems, if a string is not a number, the returned number from string-->number conversion is undetermined
x Non-unicode version: invalid read with assign()

Version 0.3.3.1 2008-03-14
---------------
+ Basic support of threads
