@@ -2,6 +2,7 @@ Version 0.4.3, 2009-
 -------------
 + OpenSolaris support
 + Path separator
++ Ztring: handling of another format of date
 
 Version 0.4.2, 2009-04-17
 -------------
